# CHARM-Bench

./: .env.example  .gitattributes  .gitignore  DATA_LICENSE.md  LICENSE  README.md  main.py  pyproject.toml
charm/: __init__.py  adapters.py  cli.py  dataset.py  environment.py  eval.py  pinyin.py  types.py
data/: charm-bench-100.jsonl
