[project]
name = "charm"
version = "0.1.0"
description = "CHinese homophonic Associative Reasoning with Multimodality benchmark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "pypinyin>=0.53.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
charm = "charm.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
